--- a/assets/css/_variables.css
+++ b/assets/css/_variables.css
@@ -3,7 +3,7 @@
 @custom-media --breakpoint-large screen and (min-width: 60em);
 
 :root {
-  --sans-serif: lato, 'helvetica neue', helvetica, arial;
+  --sans-serif: lato, helvetica, arial;
   --serif: georgia, serif;
   --code: consolas, monaco, monospace;
 
